# nRF52832

./: .gitignore  .gitmodules  CMakeLists.txt  notes.txt
app/: CMakeLists.txt
app/src/controllers/: mainController.c
cmake/: Docs.cmake  Findtoolchain.cmake  Warnings.cmake
config/: CMakeLists.txt  config.h.in
config/jlink/: erase.jlink  flash.jlink
lib/: CMakeLists.txt
lib/NRF52832_XXAA/: CMakeLists.txt
tests/: CMakeLists.txt  test_foo.c
tests/prototype/: CMakeLists.txt
tests/prototype/inc/: prototype.h
tests/prototype/src/: prototype.c
utils/misc/Build_Examples/: Makefile
